// Product Management Database Schema
// Generated from DATABASE_SCHEMA_PLAN.md
// Import this file to dbdiagram.io to visualize the schema

// ============================================
// EXISTING TABLES
// ============================================

Table product_categories {
  id integer [primary key, increment]
  category_name varchar(100) [not null, unique]
  description text
  photo varchar(255)
  is_active boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'Main product categories (existing table)'
}

Table users {
  id integer [primary key, increment]
  username varchar(100) [not null, unique]
  Firstname varchar(100) [not null]
  Middlename varchar(100)
  Lastname varchar(100) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  role_id integer [not null]
  is_active boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'System users (existing table)'
}

// ============================================
// PHASE 1: CORE TABLES
// ============================================

Table departments {
  id integer [primary key, increment]
  department_name varchar(100) [not null, unique]
  department_code varchar(20) [unique]
  description text
  is_active boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'Product departments'
}

Table sub_categories {
  id integer [primary key, increment]
  sub_category_name varchar(100) [not null]
  category_id integer [not null]
  description text
  photo varchar(255)
  display_order integer [default: 0]
  is_active boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'Sub-categories under main categories'
}

Table product_media {
  id integer [primary key, increment]
  product_id integer [not null]
  media_url varchar(500) [not null]
  media_type varchar(20) [not null, note: 'photo']
  display_order integer [default: 0]
  is_primary boolean [default: false]
  file_size integer
  file_name varchar(255)
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'Product photos (up to 6 per product)'
}

Table product_marketing_media {
  id integer [primary key, increment]
  product_id integer [not null]
  media_url varchar(500) [not null]
  media_type varchar(20) [not null, note: 'photo or video']
  display_order integer [default: 0]
  thumbnail_url varchar(500)
  duration integer [note: 'Video duration in seconds']
  file_size integer
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'Marketing photos (up to 10) and videos'
}

// ============================================
// ZONE TABLES
// ============================================

Table product_zones {
  id integer [primary key, increment]
  product_id integer [not null]
  zone_name varchar(100) [not null, note: 'Zone name']
  zone_code varchar(20) [note: 'Zone code']
  description text [note: 'Zone description']
  is_active boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp
  
  indexes {
    product_id
  }
  
  Note: 'Product zones - Stores zone information directly per product (Multiple assignment possible)'
}

// ============================================
// PHYSICAL ATTRIBUTES TABLES
// ============================================

Table product_physical_attributes {
  id integer [primary key, increment]
  product_id integer [not null]
  height varchar(30) [note: 'Height of Item - 30 Characters - Optional']
  length varchar(30) [note: 'Length of Item - 30 Characters - Optional']
  width varchar(30) [note: 'Width of Item - 30 Characters - Optional']
  weight varchar(30) [note: 'Weight of Item - 30 Characters - Optional']
  color varchar(30) [note: 'Color of Item - 30 Characters - Optional']
  created_at timestamp [not null]
  updated_at timestamp
  
  indexes {
    product_id
  }
  
  Note: 'Product physical attributes - Height, Length, Width, Weight, Color'
}

// ============================================
// VENDOR TABLES
// ============================================

Table product_vendors {
  id integer [primary key, increment]
  product_id integer [not null]
  vendor_name varchar(150) [not null, note: 'Supplier/Vendor name']
  contact_person varchar(100) [note: 'Contact person name']
  contact_email varchar(100) [note: 'Contact email']
  contact_phone varchar(20) [note: 'Contact phone']
  gstin varchar(15) [note: 'GST Identification Number']
  address text [note: 'Vendor address']
  is_primary boolean [default: false, note: 'Primary vendor flag']
  notes text [note: 'Additional vendor notes']
  is_active boolean [default: true]
  created_at timestamp [not null]
  updated_at timestamp
  
  indexes {
    product_id
  }
  
  Note: 'Product vendors - Stores vendor information directly per product (Name, contact, GSTIN)'
}

// ============================================
// MAIN PRODUCTS TABLE
// ============================================

Table products {
  id integer [primary key, increment]
  
  // Phase 1: Core Product Fields Only
  product_code varchar(10) [not null, note: 'Local Product Code - Up to 10-digit alphanumeric']
  upc_code varchar(20) [not null, note: 'Universal Product Code - Up to 20 characters']
  product_name varchar(150) [not null, note: 'Name of the product - Max 150 characters']
  product_type varchar(20) [note: 'ENUM: Standard, Lot Matrix - Optional']
  description text [note: 'Product description - Max 500 characters - Optional']
  model varchar(100) [note: 'Model identifier - Max 100 characters - Optional']
  department_id integer [not null, note: 'Product department - Required']
  sub_category_id integer [not null, note: 'Product sub-category - Required (Category is derived from sub-category)']
  size varchar(20) [note: 'Product size - Predefined values (S/M/L/XL, etc.) - Optional']
  pack varchar(100) [note: 'Pack or bundle information - Predefined list - Optional']
  vintage varchar(20) [note: 'Vintage/season of product - Max 20 characters - Optional']
  hsn_code varchar(20) [not null, note: 'HSN Code - Up to 20 digits numeric - Required']
  unit_price decimal(10,2) [not null, note: 'Unit Price - Price of the Product - Number up to 2 decimal places and max up to 10 digits - Required']
  stock_quantity integer [not null, note: 'Stock Quantity - Available stock units - Positive/Negative Numbers - Required']
  
  // GST Fields
  gst_1_sgst boolean [not null, default: false, note: 'GST 1 (SGST) - Boolean - Required']
  gst_1_slab varchar(20) [not null, note: 'GST 1 Slab - Predefined list (e.g., 5%, 12%, 18%, 28%) - Required']
  gst_2_cgst boolean [not null, default: false, note: 'GST 2 (CGST) - Boolean - Required']
  gst_2_slab varchar(20) [not null, note: 'GST 2 Slab - Dropdown with 6 Options - Predefined list - Required']
  gst_3_igst boolean [not null, default: false, note: 'GST 3 (IGST) - Boolean - Required']
  gst_3_slab varchar(20) [not null, note: 'GST 3 Slab - Dropdown with 6 Options - Predefined list - Required']
  non_taxable boolean [not null, default: false, note: 'Non Taxable - Boolean - Default: False - Required']
  item_inactive boolean [not null, default: false, note: 'Item Inactive - Boolean - Default: False - Required']
  non_stock_item boolean [not null, default: false, note: 'Non Stock Item - Boolean - Default: False - Required']
  
  is_active boolean [default: true]
  
  created_at timestamp [not null]
  updated_at timestamp
  
  Note: 'Main products table - Phase 1: Core fields only'
}

// ============================================
// RELATIONSHIPS
// ============================================

// Sub-categories to Categories
Ref: sub_categories.category_id > product_categories.id [delete: cascade]

// Products to Departments
Ref: products.department_id > departments.id

// Products to Sub-categories (Category is derived from sub-category)
Ref: products.sub_category_id > sub_categories.id

// Product Media
Ref: product_media.product_id > products.id [delete: cascade]

// Product Marketing Media
Ref: product_marketing_media.product_id > products.id [delete: cascade]

// Product Vendors (One-to-Many: Product can have multiple vendors)
Ref: product_vendors.product_id > products.id [delete: cascade]

// Product Zones (One-to-Many: Product can have multiple zones)
Ref: product_zones.product_id > products.id [delete: cascade]

// Product Physical Attributes (One-to-Many: Product can have multiple physical attribute entries)
Ref: product_physical_attributes.product_id > products.id [delete: cascade]

// ============================================
// NOTES
// ============================================

Note products_note {
  '''
  # Products Table Notes - Phase 1 (Simplified)
  
  ## Current Fields (Phase 1 Only):
  - product_code: Local product code (10-digit alphanumeric) - REQUIRED
  - upc_code: Universal Product Code (20 characters) - REQUIRED
  - product_name: Name of the product (Max 150 characters) - REQUIRED
  - product_type: ENUM (Standard, Lot Matrix) - OPTIONAL
  - description: Product description (Max 500 characters) - OPTIONAL
  - model: Model identifier (Max 100 characters) - OPTIONAL
  - department_id: Product department - REQUIRED
  - sub_category_id: Product sub-category - REQUIRED
  - size: Product size - Predefined values (S/M/L/XL, etc.) - OPTIONAL
  - pack: Pack or bundle information - Predefined list - OPTIONAL
  - vintage: Vintage/season of product (Max 20 characters) - OPTIONAL
  - hsn_code: HSN Code (Up to 20 digits numeric) - REQUIRED
  - unit_price: Unit Price - Price of the Product (Number up to 2 decimal places and max up to 10 digits) - REQUIRED
  - stock_quantity: Stock Quantity - Available stock units (Positive/Negative Numbers) - REQUIRED
  - gst_1_sgst: GST 1 (SGST) - Boolean - REQUIRED
  - gst_1_slab: GST 1 Slab - Predefined list - REQUIRED
  - gst_2_cgst: GST 2 (CGST) - Boolean - REQUIRED
  - gst_2_slab: GST 2 Slab - Dropdown with 6 Options - Predefined list - REQUIRED
  - gst_3_igst: GST 3 (IGST) - Boolean - REQUIRED
  - gst_3_slab: GST 3 Slab - Dropdown with 6 Options - Predefined list - REQUIRED
  - non_taxable: Non Taxable - Boolean - Default: False - REQUIRED
  - item_inactive: Item Inactive - Boolean - Default: False - REQUIRED
  - non_stock_item: Non Stock Item - Boolean - Default: False - REQUIRED
  
  ## Relationship Design:
  - Products are linked to departments (direct relationship)
  - Products are linked ONLY to sub_categories (not directly to categories)
  - Category is derived from sub_category.category_id
  - This ensures data integrity: prevents mismatch between category and sub-category
  - Relationships: 
    * products → departments
    * products → sub_categories → product_categories
  
  ## Future Phases:
  - Phase 2: Will add GST fields, price, stock, physical attributes, etc.
  - Phase 3: Will add media tables, zones, vendors, custom fields, etc.
  
  ## Note:
  - Department field is replaced with Category (using existing product_categories table)
  - All other fields will be added in subsequent phases
  '''
}

